--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -35,7 +35,13 @@
             "period": "Period of Time",
             "category": "Category",
             "development": "Development",
-            "settings": "Settings"
+            "settings": "Settings",
+            "position": "Position",
+            "experience": "Experience",
+            "company_name": "Name of company",
+            "skills": "Skills",
+            "languages": "Languages",
+            "add_information": "Other additional information"
         }
 }
   
