--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -40,7 +40,7 @@
             "experience": "Experience",
             "company_name": "Name of company",
             "skills": "Skills",
-            "languages": "Languages",
+            "languages": "English",
             "add_information": "Other additional information",
             "text_type": "(Text type)",
             "tag_type": "(tag type [ ])"
