fixing PR comments

--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -75,6 +75,15 @@
          "poorTitle": "E-Mail Not Found: We were not able to locate merry.mazbell@gmail.com in our system. Please try another e-mail address.",
          "linkToLogin": "Login?",
          "linkToPasswordPage": "Forgot Password?"
+     },
+     "HomePage": {
+         "homeTitle": "THE BEST WAY TO FIND YOUR JOB!",
+         "hello": "Hello",  
+         "welcomeTo": ", welcome to our service.",
+         "youCanView": "You can view yours"
      }
+
+
+     
 }
   
