--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -48,37 +48,60 @@
 
     
     "ForgotPage": {
-         "title": "Forgot Password",
-         "email": {
-             "item": "Email",
-             "error": "Please input your Email!!"
-         },
-         "btnText": "Submit",
-         "linkText": "Back to Login?"
-     },
-     "ResetPage": {
-         "title": "Reset Password",
-         "passwordTitle": {
-                 "item": "Password:",
-                 "placeholder": "Your password",
-                 "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
-             },
-         "conPasswordTitle": {
-                 "item": "Confirm Password:",
-                 "placeholder": "Confirm your password",
-                 "error": "Password must be same"
-             },
-         "error": "Passwords do not match, please try again",
-         "btnText": "Save Password",
-         "linkText": "Back to Login?",
-         "loginText": "Successfully done. Now please Login",
-         "passwordError": "Something went error, please try again!"
-     },
-     "VerifyEmail": {
-         "fineTitle": "A recovery letter is sent, please check your email or go to Login page.",
-         "poorTitle": "E-Mail Not Found: We were not able to locate merry.mazbell@gmail.com in our system. Please try another e-mail address.",
-         "linkToLogin": "Login?",
-         "linkToPasswordPage": "Forgot Password?"
-     }
+        "title": "Forgot Password",
+        "email": {
+            "item": "Email",
+            "error": "Please input your Email!!"
+        },
+        "btnText": "Submit",
+        "linkText": "Back to Login?"
+    },
+    "ResetPage": {
+        "title": "Reset Password",
+        "passwordTitle": {
+                "item": "Password:",
+                "placeholder": "Your password",
+                "error": "password must contain at least one capital letter, one number and length must be minimum8 symbols"
+            },
+        "conPasswordTitle": {
+                "item": "Confirm Password:",
+                "placeholder": "Confirm your password",
+                "error": "Password must be same"
+            },
+        "error": "Passwords do not match, please try again",
+        "btnText": "Save Password",
+        "linkText": "Back to Login?",
+        "loginText": "Successfully done. Now please Login",
+        "passwordError": "Something went error, please try again!"
+    },
+    "VerifyEmail": {
+        "fineTitle": "A recovery letter is sent, please check your email or go to Login page.",
+        "poorTitle": "E-Mail Not Found: We were not able to locate merry.mazbell@gmail.com in our system. Please try another e-mail address.",
+        "linkToLogin": "Login?",
+        "linkToPasswordPage": "Forgot Password?"
+    },
+
+    "ContactInfo": {
+        "title": "My Account",
+        "userFullName": "Jon Doe",
+        "userRole": "User",
+        "userFirstName": "First Name",
+        "userLastName": "Last Name",
+        "userPhone": "Phone",
+        "userEmail": "Email",
+        "userPassword": "Password",
+        "btnChangeText": "Change",
+        "passwordTitle": {
+            "item": "New Password:",
+            "placeholder": "Your new password",
+            "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
+        },
+        "conPasswordTitle": {
+            "item": "Confirm New Password:",
+            "placeholder": "Confirm your new password",
+            "error": "Password must be same"
+        },
+        "btnText":"Save Password"
+    }
 }
   
