--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -22,7 +22,13 @@
     "email": "Email",
     "inputEmail": "input your email",
     "password": "Password",
+    "enterPassword": "Please enter your password!",
     "forgotPassword": "Forgot your password?",
+    "enterLastName": "Please enter your last name.",
+    "enterFirstName": "Please enter your first name.",
+    "confirmPassword": "Please confirm your password!",
+    "checkEmail": "Check if the email you entered is correct our input your email!",
+    "notMatch": "The two passwords that you entered do not match!",
     "inputPassword": "input your password",
     "signIn": "Sign in",
     "signUp": "Sign Up",
@@ -30,7 +36,8 @@
     "haveAccount": "You already have an account?",
     "registerNow": "Register now",
     "login": "Login",
-    "signInWith": "Sign in with"
+    "signInWith": "Sign in with",
+    "passwordCondition": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
   },
   "TestReusable": {
     "wonderfulWorld": "What A Wonderful World"
