--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -43,7 +43,8 @@
             "languages": "English",
             "add_information": "Other additional information",
             "text_type": "(Text type)",
-            "tag_type": "(tag type [ ])"
+            "tag_type": "(tag type [ ])",
+            "contact_info": "Contact Info"
         },
 
     
