--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -78,91 +78,58 @@
   "ResetPage": {
     "title": "Reset Password",
     "passwordTitle": {
-      "item": "Password:",
-      "placeholder": "Your password",
-      "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
-    },
-    "conPasswordTitle": {
-      "item": "Confirm Password:",
-      "placeholder": "Confirm your password",
-      "error": "Password must be same"
-    }
-  },
-    "PublicProfile": {
-            "user_name": "User Name",
-            "hour_rate": "Hour rate",
-            "amount_hours": "The available amount of hours:",
-            "education": "Education:",
-            "name_of_courses": "Name of courses",
-            "specialization": "Specialization",
-            "period": "Period of Time",
-            "category": "Category",
-            "development": "Development",
-            "settings": "Settings",
-            "position": "Position",
-            "experience": "Experience",
-            "company_name": "Name of company",
-            "skills": "Skills",
-            "languages": "English",
-            "add_information": "Other additional information",
-            "text_type": "(Text type)",
-            "tag_type": "(tag type [ ])",
-
-        },
-
-
-
-     "ResetPage": {
-         "title": "Reset Password",
-         "passwordTitle": {
-                 "item": "Password:",
-                 "placeholder": "Your password",
-                 "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
-             },
-         "conPasswordTitle": {
-                 "item": "Confirm Password:",
-                 "placeholder": "Confirm your password",
-                 "error": "Password must be same"
-             },
-         "error": "Passwords do not match, please try again",
-         "btnText": "Save Password",
-         "linkText": "Back to Login?",
-         "loginText": "Successfully done. Now please Login",
-         "passwordError": "Something went error, please try again!"
-     },
-     "VerifyEmail": {
-         "fineTitle": "A recovery letter is sent, please check your email or go to Login page.",
-         "poorTitle": "E-Mail Not Found: We were not able to locate merry.mazbell@gmail.com in our system. Please try another e-mail address.",
-         "linkToLogin": "Login?",
-         "linkToPasswordPage": "Forgot Password?"
-     },
-     "HomePage": {
-         "homeTitle": "THE BEST WAY TO FIND YOUR JOB!",
-         "hello": "Hello",
-         "welcomeTo": ", welcome to our service.",
-         "youCanView": "You can view yours"
-     },
-
-    "ContactInfo": {
-        "title": "My Account",
-        "userFullName": "Jon Doe",
-        "userRole": "User",
-        "userFirstName": "First Name",
-        "userLastName": "Last Name",
-        "userPhone": "Phone",
-        "userEmail": "Email",
-        "userPassword": "Password",
-        "btnChangeText": "Change",
-        "passwordTitle": {
-            "item": "New Password:",
-            "placeholder": "Your new password",
+            "item": "Password:",
+            "placeholder": "Your password",
             "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
         },
-        "conPasswordTitle": {
-            "item": "Confirm New Password:",
-            "placeholder": "Confirm your new password",
+    "conPasswordTitle": {
+            "item": "Confirm Password:",
+            "placeholder": "Confirm your password",
             "error": "Password must be same"
         },
-        "btnText":"Save Password"
-    }
+    "error": "Passwords do not match, please try again",
+    "btnText": "Save Password",
+    "linkText": "Back to Login?",
+    "loginText": "Successfully done. Now please Login",
+    "passwordError": "Something went error, please try again!"
+  },
+
+  "VerifyEmail": {
+      "fineTitle": "A recovery letter is sent, please check your email or go to Login page.",
+      "poorTitle": "E-Mail Not Found: We were not able to locate merry.mazbell@gmail.com in our system. Please try another e-mail address.",
+      "linkToLogin": "Login?",
+      "linkToPasswordPage": "Forgot Password?"
+  },
+  "HomePage": {
+      "homeTitle": "THE BEST WAY TO FIND YOUR JOB!",
+      "hello": "Hello",
+      "welcomeTo": ", welcome to our service.",
+      "youCanView": "You can view yours"
+  },
+
+  "ContactInfo": {
+      "title": "My Account",
+      "userRole": "Not Set",
+      "userFirstName": "First Name",
+      "userLastName": "Last Name",
+      "userPhone": "Phone",
+      "userEmail": "Email",
+      "userPassword": "Password",
+      "btnChangeText": "Change",
+      "passwordTitle": {
+          "item": "New Password:",
+          "placeholder": "Your new password",
+          "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
+      },
+      "conPasswordTitle": {
+          "item": "Confirm New Password:",
+          "placeholder": "Confirm your new password",
+          "error": "Password must be same"
+      },
+      "btnText":"Save Password",
+      "afterChangePassword": {
+        "success": "Password successfully changed!",
+        "error": "Something went wrong, please try again later!"
+      }
+  }
 }
