--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -110,6 +110,21 @@
     "skills": "skills:",
     "category": "category:",
     "timeAvailable": "time available:",
-    "english": "english:"
+    "english": "english:",
+    "sendProposal": "Send proposal",
+    "englishLevel": "English level",
+    "filters": "Filters",
+    "search": "Search",
+    "none": "None",
+    "preIntermediate": "Pre-intermediate",
+    "intermediate": "Intermediate",
+    "upperIntermediate": "Upper Intermediate",
+    "fluent": "Fluent",
+    "Skills": "Skills",
+    "price": "Price",
+    "TimeAvailable": "Time available",
+    "perDay": "per day",
+    "hour": "hour",
+    "submit": "Submit"
   }
 }
