--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -174,5 +174,15 @@
             "success": "Password successfully changed!",
             "error": "Something went wrong, please try again later!"
         }
+    },
+
+    "Chat": {
+        "offerYes": "Accept",
+        "offerNo": "Refuse",
+        "sendTime": "1.03 PM",
+        "contactTime": "32 mins ago",
+        "offerBtnText": "Job Offer",
+        "welcome": "Welcome",
+        "welcomeText": "Please select a chat to Start messaging."
     }
 }
