--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -46,6 +46,8 @@
     },
     "PublicProfile": {
         "user_name": "User Name",
+        "first_name": "First Name",
+        "last_name": "Last Name",
         "hour_rate": "Hour rate",
         "amount_hours": "The available amount of hours:",
         "education": "Education:",
@@ -53,6 +55,7 @@
         "specialization": "Specialization",
         "period": "Period of Time",
         "category": "Category",
+        "choose_category": "Сhoose a category",
         "development": "Development",
         "settings": "Settings",
         "position": "Position",
