--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -181,5 +181,13 @@
             "success": "Password successfully changed!",
             "error": "Something went wrong, please try again later!"
         }
+    },
+    "OffersPage": {
+        "accept": "Accept",
+        "decline": "Decline",
+        "goToChat": "Go to chat",
+        "myOffers": "My Offers",
+        "myInvitations": "My Invitations",
+        "myProposals": "My Proposals"
     }
 }
