--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -7,7 +7,8 @@
         "profile": "PROFILE",
         "jobs": "JOBS",
         "myOffers": "MY OFFERS",
-        "welcome": "Welcome,"
+        "welcome": "Welcome,",
+        "logout": "logout"
     },
     "SignInForm": {},
     "AuthForm": {
