--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -7,6 +7,7 @@
         "profile": "PROFILE",
         "jobs": "JOBS",
         "myOffers": "MY OFFERS",
+        "myContracts": "MY CONTRACTS",
         "welcome": "Welcome,",
         "logout": "logout"
     },
