--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -184,9 +184,18 @@
         "myOffers": "My Offers",
         "myInvitations": "My Invitations",
         "myProposals": "My Proposals",
-        "myHourRate": "my hour rate:",
-        "status": "status",
-        "ownerHourRate": "job owner hour rate"
+        "myHourRate": "my hour rate: ",
+        "status": "status: ",
+        "ownerHourRate": "job owner hour rate: "
+    },
+    "ContractsPage": {
+        "myContracts": "My Contracts",
+        "jobOwner": "job owner: ",
+        "freelancer": "freelancer: ",
+        "status": "status: ",
+        "startDate": "start date: ",
+        "endDate": "end date: ",
+        "endContract": "End Contract"
     },
     "ContactInfo": {
         "title": "My Account",
