--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -1,6 +1,6 @@
 {
     "TalentPage": {
-        "send_interview": "Send invite to interview",
+        "send_interview": "Send interview",
         "talents": "Talents on GetJOB!"
     },
     "AppBar": {
