--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -75,7 +75,7 @@
         "text_type": "(Text type)",
         "tag_type": "(tag type [ ])",
         "contact_info": "Contact Info",
-        "save_changes": "Save canges",
+        "save_changes": "Save changes",
         "education_name": "Name of Education"
     },
 
