--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -16,7 +16,7 @@
         "logout": "logout",
         "ownerJobs": "OWN JOBS",
         "Talents": "TALENTS",
-        "myContacts": "My CONTACTS",
+        "myContacts": "MY CONTACTS",
         "selectRole": " SELECT ROLE"
     },
     "SignInForm": {},
