--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -128,7 +128,7 @@
         "jobOwner": "job owner: ",
         "skills": "skills: ",
         "category": "category: ",
-        "salary": "hourly: ",
+        "hourlyRate": "hourly rate: ",
         "timeAvailable": "time available: ",
         "projectDuration": "project duration: ",
         "english": "english:",
@@ -143,7 +143,7 @@
         "fluent": "Fluent",
         "Skills": "Skills",
         "Category": "Category",
-        "price": "Hourly",
+        "HourlyRate": "Hourly Rate",
         "TimeAvailable": "Time available",
         "perDay": "per day",
         "hour": "hour",
@@ -201,9 +201,9 @@
         "myOffers": "My Offers",
         "myInvitations": "My Invitations",
         "myProposals": "My Proposals",
-        "myHourRate": "my hour rate: ",
+        "myHourlyRate": "my hourly rate: ",
         "status": "status: ",
-        "ownerHourRate": "job owner hour rate: ",
+        "ownerHourlyRate": "job owner hourly rate: ",
         "youAccepted": "You accepted this offer. Contract created.",
         "youRejected": "You rejected this offer"
     },
