--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -194,7 +194,8 @@
         "errorLetter": "You must write a cover letter",
         "errorRate": "You must write your hourly rate",
         "proposalSentTitle": "You have already responded to this project. Try another one!",
-        "sentSuccess": "You successfully sent Proposal!"
+        "sentSuccess": "You successfully sent Proposal!",
+        "amountPlaceholder": "max amount 50$"
     },
     "OffersPage": {
         "accept": "Accept",
