--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -18,7 +18,8 @@
         "Talents": "TALENTS",
         "selectRole": " SELECT ROLE",
         "chat": "CHAT",
-        "myContacts": "MY CONTACTS"
+        "myContacts": "MY CONTACTS",
+        "createJob": "CREATE JOB"
     },
     "SignInForm": {},
     "AuthForm": {
