--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -1,7 +1,9 @@
 {
     "TalentPage": {
-        "send_interview": "Send interview",
-        "talents": "Talents on GetJOB!"
+        "talents": "Talents on GetJOB!",
+        "send_interview": "Invite to interview",
+        "already_sent": "Invitation already sent",
+        "sent_to": "Invitation sent to "
     },
     "AppBar": {
         "get": "Get",
@@ -82,7 +84,8 @@
         "tag_type": "(tag type [ ])",
         "contact_info": "Contact Info",
         "save_changes": "Save changes",
-        "education_name": "Name of Education"
+        "education_name": "Name of Education",
+        "back": "Back"
     },
 
     "ForgotPage": {
