--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -3,7 +3,8 @@
         "talents": "Talents on GetJOB!",
         "send_interview": "Invite to interview",
         "already_sent": "Invite already sent",
-        "sent_to": "Invite sent to "
+        "sent_to": "Invite sent to ",
+        "title_modal": "Select a job to send an invitation"
     },
     "AppBar": {
         "get": "Get",
